--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <None Remove="Resources\icon_add_fund.png" />
-    <None Remove="Resources\icon_close.png" />
+    <None Remove="Resources\icon_exit.png" />
     <None Remove="Resources\icon_import_trades.png" />
     <None Remove="Resources\icon_settings.png" />
     <None Remove="Resources\icon_view_fund.png" />
@@ -24,7 +24,7 @@
     <Resource Include="Resources\icon_add_fund.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\icon_close.png">
+    <Resource Include="Resources\icon_exit.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icon_import_trades.png">
