--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-#ignore migrations file
+#ignore migrations and database file
 Migrations/
+*.db
