--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="Resources\icons8-about-24.png" />
     <None Remove="Resources\icons8-add-fund-24.png" />
+    <None Remove="Resources\icons8-AddInvestor-24.png" />
     <None Remove="Resources\icons8-all-funds-view-24.png" />
     <None Remove="Resources\icons8-all-securities24.png" />
     <None Remove="Resources\icons8-device-manager-24.png" />
@@ -41,6 +42,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-add-fund-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-AddInvestor-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-all-funds-view-24.png">
