transactions and position crud buttons

--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -13,13 +13,16 @@
     <None Remove="Resources\icons8-all-funds-view-24.png" />
     <None Remove="Resources\icons8-all-securities24.png" />
     <None Remove="Resources\icons8-connection-16.png" />
+    <None Remove="Resources\icons8-deleteTrade-24.png" />
     <None Remove="Resources\icons8-device-manager-24.png" />
+    <None Remove="Resources\icons8-editTrade-24.png" />
     <None Remove="Resources\icons8-exit-24.png" />
     <None Remove="Resources\icons8-fx-rates-24.png" />
     <None Remove="Resources\icons8-home-24.png" />
     <None Remove="Resources\icons8-import-csv-24.png" />
     <None Remove="Resources\icons8-NAVFinalised-24.png" />
     <None Remove="Resources\icons8-NAVnotFinalised-24.png" />
+    <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
     <None Remove="Resources\portfolioace logo.png" />
     <None Remove="Resources\portfolioace_logo2_hd.png" />
@@ -58,7 +61,13 @@
     <Resource Include="Resources\icons8-connection-16.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-deleteTrade-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-device-manager-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-editTrade-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-exit-24.png">
@@ -77,6 +86,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-NAVnotFinalised-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-positionBreakdown-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-services-24.png">
