--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -18,8 +18,10 @@
     <None Remove="Resources\icons8-editTrade-24.png" />
     <None Remove="Resources\icons8-exit-24.png" />
     <None Remove="Resources\icons8-fx-rates-24.png" />
+    <None Remove="Resources\icons8-graph-24.png" />
     <None Remove="Resources\icons8-home-24.png" />
     <None Remove="Resources\icons8-import-csv-24.png" />
+    <None Remove="Resources\icons8-info-24.png" />
     <None Remove="Resources\icons8-NAVFinalised-24.png" />
     <None Remove="Resources\icons8-NAVnotFinalised-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
@@ -76,10 +78,16 @@
     <Resource Include="Resources\icons8-fx-rates-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-graph-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-home-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-import-csv-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-info-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-NAVFinalised-24.png">
