--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -18,15 +18,18 @@
     <None Remove="Resources\icons8-editTrade-24.png" />
     <None Remove="Resources\icons8-exit-24.png" />
     <None Remove="Resources\icons8-fx-rates-24.png" />
+    <None Remove="Resources\icons8-github-48.png" />
     <None Remove="Resources\icons8-graph-24.png" />
     <None Remove="Resources\icons8-home-24.png" />
     <None Remove="Resources\icons8-import-csv-24.png" />
     <None Remove="Resources\icons8-info-24.png" />
+    <None Remove="Resources\icons8-linkedin-48.png" />
     <None Remove="Resources\icons8-NAVFinalised-24.png" />
     <None Remove="Resources\icons8-NAVnotFinalised-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
     <None Remove="Resources\icons8-undo-24.png" />
+    <None Remove="Resources\icons8-youtube-48.png" />
     <None Remove="Resources\portfolioace logo.png" />
     <None Remove="Resources\portfolioace_logo2_hd.png" />
     <None Remove="Resources\portfolioace_logo2_icon.ico" />
@@ -81,6 +84,9 @@
     <Resource Include="Resources\icons8-fx-rates-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-github-48.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-graph-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -91,6 +97,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-info-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-linkedin-48.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-NAVFinalised-24.png">
@@ -106,6 +115,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-undo-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-youtube-48.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\portfolioace logo.png">
