--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -13,6 +13,7 @@
     <None Remove="Resources\icons8-all-funds-view-24.png" />
     <None Remove="Resources\icons8-all-securities24.png" />
     <None Remove="Resources\icons8-connection-16.png" />
+    <None Remove="Resources\icons8-cross-24.png" />
     <None Remove="Resources\icons8-deleteTrade-24.png" />
     <None Remove="Resources\icons8-device-manager-24.png" />
     <None Remove="Resources\icons8-editTrade-24.png" />
@@ -24,11 +25,12 @@
     <None Remove="Resources\icons8-import-csv-24.png" />
     <None Remove="Resources\icons8-info-24.png" />
     <None Remove="Resources\icons8-linkedin-48.png" />
-    <None Remove="Resources\icons8-NAVFinalised-24.png" />
-    <None Remove="Resources\icons8-NAVnotFinalised-24.png" />
+    <None Remove="Resources\icons8-locked-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
+    <None Remove="Resources\icons8-tick-24.png" />
     <None Remove="Resources\icons8-undo-24.png" />
+    <None Remove="Resources\icons8-unlocked-24.png" />
     <None Remove="Resources\icons8-youtube-48.png" />
     <None Remove="Resources\portfolioace logo.png" />
     <None Remove="Resources\portfolioace_logo2_hd.png" />
@@ -102,10 +104,13 @@
     <Resource Include="Resources\icons8-linkedin-48.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\icons8-NAVFinalised-24.png">
+    <Resource Include="Resources\icons8-locked-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\icons8-NAVnotFinalised-24.png">
+    <Resource Include="Resources\icons8-tick-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-cross-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-positionBreakdown-24.png">
@@ -115,6 +120,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-undo-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-unlocked-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-youtube-48.png">
