--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -26,6 +26,7 @@
     <None Remove="Resources\icons8-info-24.png" />
     <None Remove="Resources\icons8-linkedin-48.png" />
     <None Remove="Resources\icons8-locked-24.png" />
+    <None Remove="Resources\icons8-moreDetails-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
     <None Remove="Resources\icons8-tick-24.png" />
@@ -105,6 +106,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-locked-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-moreDetails-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-tick-24.png">
