--- a/PortfolioAce.DataCentre/PortfolioAce.DataCentre.csproj
+++ b/PortfolioAce.DataCentre/PortfolioAce.DataCentre.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="ServiceStack.Text.Core" Version="5.10.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PortfolioAce.Domain\PortfolioAce.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
