--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -7,16 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\generic_avatar_placeholder.png" />
     <None Remove="Resources\icons8-about-24.png" />
     <None Remove="Resources\icons8-add-fund-24.png" />
     <None Remove="Resources\icons8-AddInvestor-24.png" />
     <None Remove="Resources\icons8-all-funds-view-24.png" />
     <None Remove="Resources\icons8-all-securities24.png" />
+    <None Remove="Resources\icons8-communication-24.png" />
     <None Remove="Resources\icons8-connection-16.png" />
     <None Remove="Resources\icons8-cross-24.png" />
+    <None Remove="Resources\icons8-date-of-birth-24.png" />
     <None Remove="Resources\icons8-deleteTrade-24.png" />
     <None Remove="Resources\icons8-device-manager-24.png" />
     <None Remove="Resources\icons8-editTrade-24.png" />
+    <None Remove="Resources\icons8-email-24.png" />
     <None Remove="Resources\icons8-exit-24.png" />
     <None Remove="Resources\icons8-fx-rates-24.png" />
     <None Remove="Resources\icons8-github-48.png" />
@@ -26,6 +30,7 @@
     <None Remove="Resources\icons8-info-24.png" />
     <None Remove="Resources\icons8-linkedin-48.png" />
     <None Remove="Resources\icons8-locked-24.png" />
+    <None Remove="Resources\icons8-mobile-24.png" />
     <None Remove="Resources\icons8-moreDetails-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
@@ -57,6 +62,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\generic_avatar_placeholder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-about-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -72,7 +80,13 @@
     <Resource Include="Resources\icons8-all-securities24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-communication-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-connection-16.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-date-of-birth-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-deleteTrade-24.png">
@@ -82,6 +96,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-editTrade-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-email-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-exit-24.png">
@@ -109,6 +126,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-locked-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-mobile-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-moreDetails-24.png">
