--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-#ignore migrations and database file
-Migrations/
+#ignore database file
 *.db
