--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -50,6 +50,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoCompleteTextBox" Version="1.1.1" />
+    <PackageReference Include="CsvHelper" Version="24.0.0" />
     <PackageReference Include="DataGridExtensions" Version="2.4.7" />
     <PackageReference Include="LiveCharts.Wpf.NetCore3" Version="0.9.7" />
     <PackageReference Include="MaterialDesignExtensions" Version="3.2.0" />
@@ -196,6 +197,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="HelperObjects\DeserialisedCSVObjects\" />
   </ItemGroup>
 
 </Project>
