--- a/PortfolioAce/PortfolioAce.csproj
+++ b/PortfolioAce/PortfolioAce.csproj
@@ -16,6 +16,7 @@
     <None Remove="Resources\icons8-communication-24.png" />
     <None Remove="Resources\icons8-connection-16.png" />
     <None Remove="Resources\icons8-cross-24.png" />
+    <None Remove="Resources\icons8-csv-24.png" />
     <None Remove="Resources\icons8-csv-40.png" />
     <None Remove="Resources\icons8-date-of-birth-24.png" />
     <None Remove="Resources\icons8-deleteTrade-24.png" />
@@ -29,13 +30,16 @@
     <None Remove="Resources\icons8-home-24.png" />
     <None Remove="Resources\icons8-import-csv-24.png" />
     <None Remove="Resources\icons8-info-24.png" />
+    <None Remove="Resources\icons8-json-24.png" />
     <None Remove="Resources\icons8-linkedin-48.png" />
     <None Remove="Resources\icons8-locked-24.png" />
     <None Remove="Resources\icons8-mobile-24.png" />
     <None Remove="Resources\icons8-moreDetails-24.png" />
+    <None Remove="Resources\icons8-pdf-24.png" />
     <None Remove="Resources\icons8-positionBreakdown-24.png" />
     <None Remove="Resources\icons8-services-24.png" />
     <None Remove="Resources\icons8-tick-24.png" />
+    <None Remove="Resources\icons8-txt-24.png" />
     <None Remove="Resources\icons8-undo-24.png" />
     <None Remove="Resources\icons8-unlocked-24.png" />
     <None Remove="Resources\icons8-youtube-48.png" />
@@ -89,6 +93,9 @@
     <Resource Include="Resources\icons8-connection-16.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-csv-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-csv-40.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -128,6 +135,9 @@
     <Resource Include="Resources\icons8-info-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-json-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-linkedin-48.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -140,6 +150,9 @@
     <Resource Include="Resources\icons8-moreDetails-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\icons8-pdf-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icons8-tick-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -150,6 +163,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-services-24.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons8-txt-24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\icons8-undo-24.png">
