--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,8 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-#ignore database file
+# ignore database file
 *.db
+
+# ignore installer
+/PortfolioAce.Installer
